--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ matrix:
   allow_failures:
     - php: 5.5
 
-
-before_script: composer install --dev --prefer-source
+before_script:
+  - composer selfupdate
+  - COMPOSER_ROOT_VERSION=2.4 composer --prefer-source --dev install
 
 script: phpunit --debug
 
